[project]
name = "llm-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langchain-core>=0.3.27",
    "langgraph>=1.0.1",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
    "neo4j>=5.15.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "jieba>=0.42.1",
    "ipykernel>=7.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.32.2",
    "plotly>=5.15.0",
    "streamlit_agraph",
    "matplotlib>=3.10.7",
    "graphviz>=0.21",
]

